--- a/country/index.html
+++ b/country/index.html
@@ -53,7 +53,7 @@
                         <th scope="col">Герб</th>
                         <th scope="col">Флаг</th>
                         <th scope="col">Столица</th>
-                        <th scope="col">Глава / <br>Президент<br></th>
+
 
                         <th scope="col">Дата <br> незави-<br>симости / <br> дата <br> распада <br> СССР</th>
                         <th scope="col">Территория <br> (км<sup>2</sup>)</th>
@@ -68,7 +68,7 @@
                         <td><img src="ussr/gerb-of-USSR.png" alt="" width="100px"></td>
                         <td><img src="ussr/flag-of-USSR.png" alt="" width="100px"></td>
                         <td>Москва</td>
-                        <td>Михаил <br> Сергеевич <br> Горбачёв</td>
+
 
                         <td>26 <br> декабря <br> 1991</td>
                         <td>22 402 200</td>
@@ -86,15 +86,16 @@
                                 alt="" width="100px">
                             <figcaption>1993-н. в.</figcaption>
                         </td>
-                        <td><img src="russia/gos-simvolika/flag-of-RSFSR.png" alt="" width="100px">
+                        <td><img src="russia/gos-simvolika/flag-of-RSFSR.png" alt="" width="100px" class="flags">
                             <figcaption>1954-1991 <br> (в составе СССР)</figcaption><br><img
-                                src="russia/gos-simvolika/flag-of-Russia-before-1993.png" alt="" width="100px"><br>
+                                src="russia/gos-simvolika/flag-of-Russia-before-1993.png" alt="" width="100px"
+                                class="flags"><br>
                             <figcaption>1991-1993</figcaption><br><img src="russia/gos-simvolika/flag-of-Russia.png"
-                                alt="" width="100px">
+                                alt="" width="100px" class="flags">
                             <figcaption>1993-н. в.</figcaption>
                         </td>
                         <td>Москва</td>
-                        <td>Владимир <br> Владимирович <br> Путин</td>
+
 
                         </td>
                         <td>12 <br>декабря <br> 1991</td>
@@ -107,9 +108,9 @@
                     <tr>
                         <td><a href="ukraine/"> Украина</a></td>
                         <td><img src="ukraine/gerb-of-ukraine.png" alt=""></td>
-                        <td><img src="ukraine/flag-of-ukraine.png" alt=""></td>
+                        <td><img src="ukraine/flag-of-ukraine.png" alt="" class="flags"></td>
                         <td>Киев</td>
-                        <td>Владимир <br> Александрович <br> Зеленский</td>
+
 
                         </td>
                         <td>24 <br>августа <br>1991</td>
@@ -122,9 +123,10 @@
                     <tr>
                         <td><a href="belarus/">Беларусь</a></td>
                         <td><img src="belarus/gos-simvolika/gerb-of-Belarus.png" alt="" width="100px"></td>
-                        <td><img src="belarus/gos-simvolika/flag-of-Belarus.png" alt="" width="100px"></td>
+                        <td><img src="belarus/gos-simvolika/flag-of-Belarus.png" alt="" width="100px" class="flags">
+                        </td>
                         <td>Минск</td>
-                        <td>Александр <br> Григорьевич <br> Лукашенко</td>
+
 
                         <td>25 <br> августа <br> 1991</td>
                         <td>207 600</td>
@@ -138,9 +140,8 @@
                         <td><img src="dni/gos-simvolika/gerb-of-Dni.png" width="100px"></td>
                         <td><img src="dni/gos-simvolika/flag-of-Dni.png" width="100px"></td>
                         <td>Донецк</td>
-                        <td>Денис <br> Владимирович <br> Пушилин</td>
 
-                        <td>7 <br> апреля <br> 2014  <br>(от Украины)</td>
+                        <td>7 <br> апреля <br> 2014 <br>(от Украины)</td>
                         <td>7 853</td>
                         <td>2 244 547</td>
                         <td>285,82</td>
@@ -151,7 +152,7 @@
                         <td><img src="lnr/gos-simvolika/gerb-of-Lnr.png" width="100px"></td>
                         <td><img src="lnr/gos-simvolika/flag-of-Lnr.png" width="100px"></td>
                         <td>Луганск</td>
-                        <td>Леонид <br> Иванович <br> Пасечник</td>
+
 
                         <td>12 <br> мая <br> 2014 <br> (от Украины)</td>
                         <td>8 377</td>
@@ -164,12 +165,14 @@
             </table>
             <div class="president">
                 <h3>Фото глав Государств Постсоветского пространоства</h3>
-                <div class="glava">
-                    <h4>СССР</h4>
 
+                <div class="glava">
+
+                    <h4>СССР</h4>
                     <img src="ussr/Gorbachev_(cropped).png" alt="" class="pres">
                     <figcaption>Михаил Сергеевич Горбачёв <br> Председатель Верховного Совета СССР (25 мая 1989 — 15
                         марта 1990) <br> Президент СССР (15 марта 1990 — 25 декабря 1991)</figcaption>
+
 
                 </div>
                 <br>
@@ -198,7 +201,7 @@
             </div>
             <br>
             <br>
-         
+
 
 
             <div id="primechania">
@@ -208,7 +211,7 @@
                         <li>На это сайте будут представлены страны: Беларусь, Российская Федерация, Украина (с ДНР и
                             ЛНР).
                         </li>
-                        <li>Независимость ДНр и ЛНР не признают члены ООН</li>
+                        <li>Независимость ДНР и ЛНР не признают члены ООН</li>
                     </ol>
                 </small>
 
