--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -33,6 +33,7 @@
     </header>
     <main>
         <div class="container">
+
             <h1 id="russia">Россия</h1>
             <hr>
             <p>
@@ -47,7 +48,8 @@
                 Столица — Москва. Государственный язык — русский.
             </p>
             <p>
-                Государственный строй — президентско-парламентская республика с федеративным устройством. С 31.12.1999
+                Государственный строй — президентско-парламентская республика с федеративным устройством. С
+                31.12.1999
                 года (с перерывом в 2008—2012 годах когда Дмитрий Медведев был президентом) должность
                 президента Российской Федерации занимает Владимир Владимирович Путин. C 16.01.2020 года должность
                 председателя
@@ -74,30 +76,40 @@
             </p>
             <h2>Государственное устройство</h2>
             <hr>
-            <h3><a href="/political-na-postsovet-space/country/russia/gos-simvolika/">Государственная символика</a></h3>
-            <p>Флаг России представляет собой прямоугольное полотнище из трёх равновеликих горизонтальных полос: верхней
-                — белого, средней — синего и нижней — красного цвета. Отношение ширины флага к его длине составляет 2:3.
+            <h3><a href="/political-na-postsovet-space/country/russia/gos-simvolika/">Государственная символика</a>
+            </h3>
+            <p>Флаг России представляет собой прямоугольное полотнище из трёх равновеликих горизонтальных полос:
+                верхней
+                — белого, средней — синего и нижней — красного цвета. Отношение ширины флага к его длине составляет
+                2:3.
             </p>
 
             <p>Герб России представляет собой четырёхугольный, с закруглёнными нижними углами, заострённый в
                 оконечности красный геральдический щит. Внутри него расположен золотой двуглавый орёл с поднятыми и
                 расправленными крыльями. Орёл увенчан двумя малыми коронами и — над ними — одной большой короной,
-                соединёнными лентой. В правой лапе орла — скипетр, в левой — держава. На груди орла, в красном щите, —
-                серебряный всадник в синем плаще на серебряном коне, поражающий серебряным копьём чёрного, опрокинутого
+                соединёнными лентой. В правой лапе орла — скипетр, в левой — держава. На груди орла, в красном щите,
+                —
+                серебряный всадник в синем плаще на серебряном коне, поражающий серебряным копьём чёрного,
+                опрокинутого
                 навзничь и попранного конём дракона.
             </p>
             <h3>Основы государственного строя</h3>
             <p>Россия — демократическое федеративное правовое государство с республиканской формой правления.</p>
             <p>Россия является федерацией. Основным законом государства является Конституция, принятая в 1993
-                году. В настоящее время Конституция России действует с рядом поправок, основные из которых были приняты
-                в 2008 году. Данные поправки, увеличившие срок полномочий президента Российской Федерации с 4 до 6 лет,
+                году. В настоящее время Конституция России действует с рядом поправок, основные из которых были
+                приняты
+                в 2008 году. Данные поправки, увеличившие срок полномочий президента Российской Федерации с 4 до 6
+                лет,
                 а Государственной думы с 4 до 5 лет, получили значительный международный резонанс. В основе
                 государственного строя России, согласно Конституции, находятся следующие базовые принципы:
-                народовластие, федерализм, социальное государство, разделение властей, светское государство, приоритет
+                народовластие, федерализм, социальное государство, разделение властей, светское государство,
+                приоритет
                 прав и свобод человека, местное самоуправление, многопартийность, идеологическое и политическое
-                многообразие, верховенство права, многообразие форм собственности, форма правления и государственного
+                многообразие, верховенство права, многообразие форм собственности, форма правления и
+                государственного
                 устройства, государственный суверенитет. По мнению исследователей, публично-правовая
-                ответственность носителей публичной власти должна иметь субсидиарный характер и её основы должны быть
+                ответственность носителей публичной власти должна иметь субсидиарный характер и её основы должны
+                быть
                 закреплены в Конституции РФ; необходима детальная проработка и совершенствование правового механизма
                 защиты основ конституционного строя Российской Федерации.
             </p>
@@ -105,13 +117,16 @@
             <h3>Федеративное устройство</h3>
 
             <p>Россия — государство с федеративным устройством. В составе Российской Федерации 85 равноправных
-                субъектов федерации, в том числе 22 республики, 9 краёв, 46 областей, 3 города федерального значения, 1
+                субъектов федерации, в том числе 22 республики, 9 краёв, 46 областей, 3 города федерального
+                значения, 1
                 автономная область, 4 автономных округа и 1 федеральная территория.</p>
 
             <p>Система органов государственной власти субъектов федерации определяется общими принципами,
                 устанавливаемыми федерацией. В каждом регионе имеется законодательный (представительный) орган
-                (законодательное собрание, дума) и исполнительный орган (правительство). Во всех субъектах существует
-                должность высшего должностного лица (глава, губернатор), которые избираются на срок не более 5 лет и не
+                (законодательное собрание, дума) и исполнительный орган (правительство). Во всех субъектах
+                существует
+                должность высшего должностного лица (глава, губернатор), которые избираются на срок не более 5 лет и
+                не
                 могут замещать указанную должность более двух сроков подряд.</p>
 
             <p>Российская Федерация также подразделяется на 8 федеральных округов, в каждом из которых работает
@@ -123,13 +138,15 @@
 
             <h3 id="president">Президент</h3>
             <p>
-                Главой государства является Президент Российской Федерации, в настоящее время — Владимир Владимирович
+                Главой государства является Президент Российской Федерации, в настоящее время — Владимир
+                Владимирович
                 Путин. В исполнении обязанностей главы государства Президенту оказывает содействие председатель
                 Правительства России, в настоящее время им является Михаил Владимирович Мишустин. Председатель
                 Правительства РФ занимает пост президента в случае смерти или отставки последнего.
             </p>
             <p>
-                Президент избирается сроком на шесть лет тайным голосованием на всеобщих прямых выборах, один и тот же
+                Президент избирается сроком на шесть лет тайным голосованием на всеобщих прямых выборах, один и тот
+                же
                 человек не может занимать президентский пост более двух сроков подряд. Конституционные нормы,
                 предусматривающие шестилетний срок полномочий президента, введены в 2008 году, ранее глава
                 государства избирался раз в четыре года.
@@ -137,24 +154,31 @@
             <p>
                 Президент обладает рядом важнейших полномочий: руководит внешней политикой, является Верховным
                 главнокомандующим Вооружёнными силами, назначает с согласия Государственной думы председателя
-                Правительства, принимает решение об отставке правительства. По предложению председателя Правительства
+                Правительства, принимает решение об отставке правительства. По предложению председателя
+                Правительства
                 назначает на должности заместителей председателя Правительства и федеральных министров, а также
                 освобождает их от должности. Президент возглавляет Совет безопасности, назначает и освобождает от
-                должности командование Вооружёнными силами. Обладает правом предлагать на рассмотрение Государственной
-                думы кандидатуры на должность председателя Центрального банка (не входящего в состав Правительства). В
-                случае агрессии или непосредственной угрозы агрессии Президент имеет право объявить военное положение на
+                должности командование Вооружёнными силами. Обладает правом предлагать на рассмотрение
+                Государственной
+                думы кандидатуры на должность председателя Центрального банка (не входящего в состав Правительства).
+                В
+                случае агрессии или непосредственной угрозы агрессии Президент имеет право объявить военное
+                положение на
                 всей территории страны или на отдельных территориях, но при этом обязан незамедлительно известить о
-                своём решении Федеральное собрание. Обладает правом издания указов, обязательных для исполнения на всей
-                территории России (указы не должны противоречить федеральным законам). Обладает также целым рядом других
+                своём решении Федеральное собрание. Обладает правом издания указов, обязательных для исполнения на
+                всей
+                территории России (указы не должны противоречить федеральным законам). Обладает также целым рядом
+                других
                 полномочий.
             </p>
             <p>
-                Президент может быть отрешён от должности Советом Федерации при условии выдвижения Государственной думой
+                Президент может быть отрешён от должности Советом Федерации при условии выдвижения Государственной
+                думой
                 обвинения в государственной измене или совершения иного тяжкого преступления и наличия положительных
                 заключений Верховного и Конституционного судов.
             </p>
             <h4>Список президентов РФ</h4>
-            <table border="1" rules="all" class="table  table-bordered" style="width: 100%;">
+            <table border="1" rules="all" class="table  table-bordered ty" style="width: 100%;">
                 <thead class="table-primary">
                     <tr>
                         <th scope="col">№ </th>
@@ -190,7 +214,7 @@
 
                         <td>
                             <a href="https://ru.wikipedia.org/wiki/Путин,_Владимир_Владимирович">Владимир <br>
-                                Владимирович <br> Путин</a> <br> <small>(исполняющий  обязанности)</small>
+                                Владимирович <br> Путин</a> <br> <small>(исполняющий обязанности)</small>
                         </td>
                         <td>31 декабря 1999</td>
                         <td>7 мая 2000</td>
@@ -201,7 +225,8 @@
                     <tr>
                         <th scope="row" rowspan="2" style="background: red;">2</th>
                         <td>1</td>
-                        <td rowspan="2"><a href="https://ru.wikipedia.org/wiki/Путин,_Владимир_Владимирович">Владимир <br>
+                        <td rowspan="2"><a href="https://ru.wikipedia.org/wiki/Путин,_Владимир_Владимирович">Владимир
+                                <br>
                                 Владимирович <br> Путин</a> <br> (р. 1952)</td>
                         <td>7 мая 2000</td>
                         <td>7 мая 2004</td>
@@ -218,7 +243,8 @@
                         <th scope="row" style="background: blue;">3</th>
                         <td>1</td>
 
-                        <td><a href="https://ru.wikipedia.org/wiki/Медведев,_Дмитрий_Анатольевич">Дмитрий <br> Анатольевич <br>
+                        <td><a href="https://ru.wikipedia.org/wiki/Медведев,_Дмитрий_Анатольевич">Дмитрий <br>
+                                Анатольевич <br>
                                 Медведев</a> <br> (р. 1965)</td>
                         <td>7 мая 2008</td>
                         <td>7 мая 2012</td>
@@ -230,7 +256,8 @@
                         <td>3</td>
 
                         </td>
-                        <td rowspan="2"><a href="https://ru.wikipedia.org/wiki/Путин,_Владимир_Владимирович">Владимир <br>
+                        <td rowspan="2"><a href="https://ru.wikipedia.org/wiki/Путин,_Владимир_Владимирович">Владимир
+                                <br>
                                 Владимирович <br> Путин</a> <br> (р. 1952)</td>
                         <td>7 мая 2012</td>
                         <td>7 мая 2018</td>
@@ -247,15 +274,12 @@
                     </tr>
                 </tbody>
             </table>
-            <p>
-            <div id="bpart"></div> - беспартийный</p>
-            <br>
-            <p>
-            <div id="part"></div> - Единная Россия</p>
+
+           
             <br>
 
             <div class="president">
-                <h3>Фото Президентов Российский Федерации</h3>
+                <h3>Фото Президентов Российской Федерации</h3>
                 <div class="elsin">
                     <img src="Boris.jpg" alt="" class="pres">
 
@@ -274,7 +298,7 @@
                     <img src="Vladimir_Vladimirovich_Putin_(2nd_Presidency).jpg" alt="" class="pres">
                     <figcaption>Владимир Владимирович Путин <br><i>(3 и 4 президентские сроки)</i></figcaption>
                 </div>
-
+                <br>
             </div>
 
             <h2>Россия и США</h2>
