--- a/country/belarus/index.html
+++ b/country/belarus/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="gos-simvolika/style.css">
-    <link rel="shortcut icon" href="gerb-of-Belarus.png">
+    <link rel="shortcut icon" href="gos-simvolika/gerb-of-Belarus.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css"
         integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
     <title>Беларусь</title>
@@ -191,9 +191,10 @@
                 </tbody>
             </table>
             <div class="president">
+                <h3>Фото президентов Республики Беларусь</h3>
                 <div class="lukashenko">
                     <img src="Lukashenko.jpg" class="pres">
-                    <figcaption>Лукашенко</figcaption>
+                    <figcaption> Александр Григорьевич Лукашенко</figcaption>
                 </div>
 
 
