--- a/country/index.html
+++ b/country/index.html
@@ -167,34 +167,42 @@
                 <h3>Фото глав Государств Постсоветского пространоства</h3>
 
                 <div class="glava">
-
-                    <h4>СССР</h4>
-                    <img src="ussr/Gorbachev_(cropped).png" alt="" class="pres">
-                    <figcaption>Михаил Сергеевич Горбачёв <br> Председатель Верховного Совета СССР (25 мая 1989 — 15
-                        марта 1990) <br> Президент СССР (15 марта 1990 — 25 декабря 1991)</figcaption>
+                    <div class="press">
+                        <h4>СССР</h4>
+                        <img src="ussr/Gorbachev_(cropped).png" alt="" class="pres">
+                        <figcaption>Михаил Сергеевич Горбачёв <br> Председатель Верховного Совета СССР (25 мая 1989 — 15
+                            марта 1990) <br> Президент СССР (15 марта 1990 — 25 декабря 1991)</figcaption>
+                    </div>
 
 
                 </div>
                 <br>
                 <div class="glava">
-                    <h4>Республика Беларусь</h4>
-                    <img src="belarus/Lukashenko.jpg" alt="" class="pres">
-                    <figcaption>Александр Григорьевич Лукашенко <br> Президент Республики Беларусь (с 20 июля 1994)
-                    </figcaption>
+                    <div class="press">
+                        <h4>Республика Беларусь</h4>
+                        <img src="belarus/Lukashenko.jpg" alt="" class="pres">
+                        <figcaption>Александр Григорьевич Лукашенко <br> Президент Республики Беларусь (с 20 июля 1994)
+                        </figcaption>
+                    </div>
                 </div>
                 <br>
                 <div class="glava">
-                    <h4>Российская Федерация</h4>
-                    <img src="russia/800px-Vladimir_Putin_11-10-2020_(cropped).jpg" alt="" class="pres">
-                    <figcaption>Владимир Владимирович Путин <br> Президент Российский Федерации (с 7 мая 2012)
-                    </figcaption>
+                    <div class="press">
+                        <h4>Российская Федерация</h4>
+                        <img src="russia/800px-Vladimir_Putin_11-10-2020_(cropped).jpg" alt="" class="pres">
+                        <figcaption>Владимир Владимирович Путин <br> Президент Российский Федерации (с 7 мая 2012)
+                        </figcaption>
+                    </div>
                 </div>
 
                 <br>
                 <div class="glava">
-                    <h4>Украина</h4>
-                    <img src="ukraine/gos-system/800px-Volodymyr_Zelensky_Official_portrait.jpg" alt="" class="pres">
-                    <figcaption>Владимир Александрович Зеленский <br> Президент Украины (с 2019)</figcaption>
+                    <div class="press">
+                        <h4>Украина</h4>
+                        <img src="ukraine/gos-system/800px-Volodymyr_Zelensky_Official_portrait.jpg" alt=""
+                            class="pres">
+                        <figcaption>Владимир Александрович Зеленский <br> Президент Украины (с 2019)</figcaption>
+                    </div>
                 </div>
 
 
