--- a/country/index.html
+++ b/country/index.html
@@ -188,7 +188,7 @@
                 <br>
                 <div class="glava">
                     <div class="press">
-                        <h4>Российская Федерация </h4>
+                        <h4>Российская Федерация 🇷🇺 </h4>
                         <img src="russia/800px-Vladimir_Putin_11-10-2020_(cropped).jpg" alt="" class="pres">
                         <figcaption>Владимир Владимирович Путин <br> Президент Российский Федерации (с 7 мая 2012)
                         </figcaption>
