--- a/country/index.html
+++ b/country/index.html
@@ -179,7 +179,7 @@
                 <br>
                 <div class="glava">
                     <div class="press">
-                        <h4>Республика Беларусь</h4>
+                        <h4>Республика Беларусь 🇧🇾</h4>
                         <img src="belarus/Lukashenko.jpg" alt="" class="pres">
                         <figcaption>Александр Григорьевич Лукашенко <br> Президент Республики Беларусь (с 20 июля 1994)
                         </figcaption>
@@ -198,7 +198,7 @@
                 <br>
                 <div class="glava">
                     <div class="press">
-                        <h4>Украина</h4>
+                        <h4>Украина 🇺🇦</h4>
                         <img src="ukraine/gos-system/800px-Volodymyr_Zelensky_Official_portrait.jpg" alt=""
                             class="pres">
                         <figcaption>Владимир Александрович Зеленский <br> Президент Украины (с 2019)</figcaption>
