--- a/country/index.html
+++ b/country/index.html
@@ -49,12 +49,9 @@
             <table border="1" rules="all" class="table text-info table-bordered" width="100%">
                 <thead class="table-primary">
                     <tr>
-                        <th scope="col">Страна</th>
-                        <th scope="col">Герб</th>
-
-
-
-                        <th scope="col">Дата <br> незави-<br>симости / <br> дата <br> распада <br> СССР</th>
+                        <th scope="col" width="20px">Страна</th>
+                        <th scope="col" width="20px">Герб</th>
+                        <th scope="col" width="20px">Дата <br> незави-<br>симости / <br> дата <br> распада <br> СССР</th>
                         <th scope="col">Территория <br> (км<sup>2</sup>)</th>
                         <th scope="col">Население</th>
                         <th scope="col">Плотность <br> населения <br> (чел./ км<sup>2</sup>)</th>
