--- a/country/index.html
+++ b/country/index.html
@@ -52,7 +52,7 @@
                         <th scope="col" width="20px">Страна</th>
                         <th scope="col" width="20px">Герб</th>
                         <th scope="col" width="20px">Дата <br> незави-<br>симости / <br> дата <br> распада <br> СССР</th>
-                        <th scope="col">Территория <br> (км<sup>2</sup>)</th>
+                        <th scope="col" width="20px">Территория <br> (км<sup>2</sup>)</th>
                         <th scope="col">Население</th>
                         <th scope="col">Плотность <br> населения <br> (чел./ км<sup>2</sup>)</th>
 
