--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -283,8 +283,8 @@
                 <div class="elsin">
                     <img src="Boris.jpg" alt="" class="pres">
 
-                    <figcaption>Борис
-                        Николаевич Ельцин</figcaption>
+                    <figcaption>Борис <br>
+                        Николаевич Ельцин </figcaption>
                 </div>
                 <div class="putin">
                     <img src="Vladimir_Vladimirovich_Putin.jpg" alt="" class="pres">
@@ -292,7 +292,7 @@
                 </div>
                 <div class="medvedev">
                     <img src="Dmitry_Anatolyevich_Medvedev.jpg" alt="" class="pres">
-                    <figcaption>Дмитрий Анатольевич Медведев</figcaption>
+                    <figcaption>Дмитрий <br> Анатольевич Медведев</figcaption>
                 </div>
                 <div class="putin">
                     <img src="Vladimir_Vladimirovich_Putin_(2nd_Presidency).jpg" alt="" class="pres">
