--- a/country/index.html
+++ b/country/index.html
@@ -191,7 +191,7 @@
                 <div class="glava">
                     <div class="press">
                         <h4>СССР</h4>
-                        <img src="ussr/flag-of-USSR.png" alt="" class="rf">
+                        <img src="ussr/flag-of-USSR.png" alt="" class="rf-flags">
                         <figcaption>Флаг СССР</figcaption>
                         <br>
                         <img src="ussr/gerb-of-USSR.png" alt="" class="rf">
@@ -201,7 +201,7 @@
                 <div class="glava">
                     <div class="press">
                         <h4>Республика Беларусь </h4>
-                        <img src="belarus/gos-simvolika/flag-of-Belarus.png" alt="" class="rf">
+                        <img src="belarus/gos-simvolika/flag-of-Belarus.png" alt="" class="rf-flags">
                         <figcaption>Флаг Республики Беларусь
                         </figcaption>
 
@@ -215,7 +215,7 @@
                 <div class="glava">
                     <div class="press">
                         <h4>Российская Федерация </h4>
-                        <img src="russia/gos-simvolika/flag-of-Russia.png" alt="" class="rf">
+                        <img src="russia/gos-simvolika/flag-of-Russia.png" alt="" class="rf-flags">
                         <figcaption>Флаг России
                         </figcaption>
                         <br>
@@ -227,7 +227,7 @@
                 <div class="glava">
                     <div class="press">
                         <h4>Украина </h4>
-                        <img src="ukraine/flag-of-ukraine.png" alt="" class="rf">
+                        <img src="ukraine/flag-of-ukraine.png" alt="" class="rf-flags">
                         <figcaption>Флаг Украины</figcaption>
                         <br>
                         <img src="ukraine/gerb-of-ukraine.png" alt="" class="rf">
