--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <a href="/political-na-postsovet-space/">Постсоветское пространоство</a>
+        <a href="/political-na-postsovet-space/">Постсоветское пространство</a>
         <a href="/political-na-postsovet-space/news">Последние новости</a>
         <a href="/political-na-postsovet-space/country/" id="id">Страны</a>
         <div>
@@ -298,7 +298,6 @@
                     <img src="Vladimir_Vladimirovich_Putin_(2nd_Presidency).jpg" alt="" class="pres">
                     <figcaption>Владимир Владимирович Путин <br><i>(3 и 4 президентские сроки)</i></figcaption>
                 </div>
-                <br>
             </div>
 
             <h2>Россия и США</h2>
