--- a/putin/index.html
+++ b/putin/index.html
@@ -3,25 +3,46 @@
 
 <head>
     <meta charset="utf-8">
-
-    <title>Таблица размеров обуви</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Предупреждение МИД | Подозрительное направление</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css"
+        integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
 </head>
 
 <body>
+   
+    <main>
+        <br><br><br><br><br><br><br><br><br><br>
+        <div class="container vnimanie">
+            <div class="shapka">
+                <a href="/political-na-postsovet-space/">Постсоветское пространство</a>
+            </div>
+            <div class="info">
+                <b>Недействующая ссылка или переход на подозрительный сайт</b>
+                <br>
+                <img src="800px-Emblema_KGB.svg.png" alt="" class="photo">
+                <br>
+                <br><br><br><br><br>
 
-    <a href="m"><button>Перейти</button></a>
-    <br>
-    &copy; 2020-2021 ООО "СССР"
-    <br><br><br>
+                <p>Направление на выезд, по которому Вы попытались покинуть страну, скорее всего, является происками
+                    гнусных
+                    капиталистов. Разведывательные органы капиталистических стран и их агентура постоянно стремятся
+                    перекинуть вас на свои сайты и скомпрометировать ваши данные, когда это им выгодно, вплоть до
+                    склонения к измене Родине. Будьте бдительны!</p>
+                <br><br><br><br><br><br><br><br><br>
+            </div>
+        </div>
+    </main>
 
-    <script type="text/javascript" charset="utf-8" async
-        src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A028d7cf9ac8efa6aa034011fec831c26730641701a1f9b74a10cef50ffba5b52&amp;width=100%25&amp;height=500&amp;lang=ru_RU&amp;scroll=true"></script>
-    <br>
-  
+
+
+
 
 
 </body>
-
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.bundle.min.js"
+    integrity="sha384-BOsAfwzjNJHrJ8cZidOg56tcQWfp6y72vEJ8xQ9w6Quywb24iOsW913URv1IS4GD"
+    crossorigin="anonymous"></script>
 
 
 </html>
