--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css"
         integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
 
-    <title>Постсоветское пространоство</title>
+    <title>Постсоветское пространство</title>
 
 </head>
 
 <body>
 
     <header>
-        <a href="/political-na-postsovet-space">Постсоветское пространоство</a>
+        <a href="/political-na-postsovet-space">Постсоветское пространство</a>
         <a href="news" title="Новости">Последние новости</a>
         <a href="country/">Страны</a>
 
