--- a/putin/index.html
+++ b/putin/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
-    <title>Предупреждение МИД | Подозрительное направление</title>
+    <title>Перенаправление</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css"
         integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
 </head>
 
 <body>
-   
+
     <main>
         <br><br><br><br><br><br><br><br><br><br>
         <div class="container vnimanie">
@@ -18,17 +18,14 @@
                 <a href="/political-na-postsovet-space/">Постсоветское пространство</a>
             </div>
             <div class="info">
-                <b>Недействующая ссылка или переход на подозрительный сайт</b>
+                <b>Недействующая ссылка или недоступная страница</b>
                 <br>
                 <img src="800px-Emblema_KGB.svg.png" alt="" class="photo">
                 <br>
                 <br><br><br><br><br>
 
-                <p>Направление на выезд, по которому Вы попытались покинуть страну, скорее всего, является происками
-                    гнусных
-                    капиталистов. Разведывательные органы капиталистических стран и их агентура постоянно стремятся
-                    перекинуть вас на свои сайты и скомпрометировать ваши данные, когда это им выгодно, вплоть до
-                    склонения к измене Родине. Будьте бдительны!</p>
+                <p>Если вас перенаправили сюда, это значит что в данный момент страница на которую вы хотели перейти
+                    недоступна или находится в стадии разработки. Потерпите, пожалуйста. А пока перейдите на главную страницу сайта.</p>
                 <br><br><br><br><br><br><br><br><br>
             </div>
         </div>
