--- a/index.html
+++ b/index.html
@@ -133,26 +133,30 @@
 
     </main>
     <footer>
-        <div class="polzavatel">
-            <b>Для пользователя</b>
-            <ul>
-                <li><a href="contacts/">Поддержка</a></li>
-                <li><a href="legal/">Правовая информация</a></li>
-                <li><a href="putin/m/">Скачать файл</a></li>
-            </ul>
-        </div>
-        <div class="country">
-            <b>Страны</b>
-            <ul>
-                <li><a href="country/belarus/">Беларусь</a></li>
-                <li><a href="country/russia/">Россия</a></li>
-                <li><a href="country/ukraine/">Украина</a></li>
-                <li><a href="country/dni/">ДНР</a></li>
-                <li><a href="country/lnr/">ЛНР</a></li>
-            </ul>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm">
+                    &copy; 2020-2021 ООО "СССР"
+                </div>
+                <div class="col-sm">
+                    <p>  <b>Для пользователя</b></p>
+                    <p><a href="contacts/">Поддержка</a></p>
+                    <p><a href="legal/">Правовая информация</a></p>
+                    <p><a href="putin/m/">Скачать файл</a></p>
+                </div>
+                
+                <div class="col-sm country">
+                    <p><b><a href="country/">Страны</a></b></p>
+                    <p><a href="country/belarus/">Беларусь</a></p>
+                    <p><a href="country/russia/">Россия</a></p>
+                    <p><a href="country/ukraine/">Украина</a></p>
+                    <p><a href="country/dni/">ДНР</a></p>
+                    <p><a href="country/lnr/">ЛНР</a></p>
+                </div>
+            </div>
         </div>
     </footer>
-    <footer>&copy; 2020-2021 ООО "СССР"</footer>
+
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.bundle.min.js"
         integrity="sha384-BOsAfwzjNJHrJ8cZidOg56tcQWfp6y72vEJ8xQ9w6Quywb24iOsW913URv1IS4GD"
         crossorigin="anonymous"></script>
