--- a/legal/index.html
+++ b/legal/index.html
@@ -81,7 +81,14 @@
                     <ol>
                         <li>Большая часть информации взята с <a href="https://ru.wikipedia.org"
                                 class="sos">Wikipedia</a> и др источников информации. Но некоторые данные мы сами
-                            Написали</li>
+                            Написали
+                        </li>
+                        <li>Информация про <a target="_blank"
+                                href="https://ru.wikipedia.org/wiki/Путин,_Владимир_Владимирович" class="sos">В. В.
+                                Путина</a>
+                            взята со сайта: <a target="_blank" href="http://kremlin.ru"
+                                class="sos">http://kremlin.ru</a>.
+                        </li>
                         <li>Весь контент размещенный на сайте не призывает к митингам, восстаниям и т. п.</li>
                         <li>Контент размещенный на сайте является нашим мнением.</li>
 
@@ -106,7 +113,8 @@
                             </b>
 
                         </li>
-                        <li>Играя в web-игры вы принимаете <a href="confidential/" class="sos">политику конфиденциальности</a></li>
+                        <li>Играя в web-игры вы принимаете <a href="confidential/" class="sos">политику
+                                конфиденциальности</a></li>
                     </ol>
                 </li>
             </ol>
