--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
 
     <main>
         <div class="container">
+            <h1>Ельцину исполнилось бы 90 лет</h1>
+            <img src="putin_mogila_elcina.jpg" alt="" >
+            <p>
+                Бори́с Николаевич Ельцин — советский и российский партийный, государственный и политический
+                деятель. Первый президент Российской Федерации (1991—1999). Родился 1 февраля 1931, в селе Бутка,
+                Буткинский район, Уральская область, РСФСР, СССР. Хороший был человек. Жалко, что он умер 23 апреля 2007 года в Москве.
+            </p>
+            <br><br>
             <h1>Новогоднее обращение к гражданам России</h1>
             <video src="KVXDPAMAOYlhUuw3puYG3txePUq7Quvn.mp4" controls poster="FfFOMkwmWEvIFB2vPI37LXJ1t0Yd1q72.jpg"
                 style="width: 100%;"></video>
@@ -139,12 +147,12 @@
                     &copy; 2020-2021 ООО "СССР"
                 </div>
                 <div class="col-sm">
-                    <p>  <b>Для пользователя</b></p>
+                    <p> <b>Для пользователя</b></p>
                     <p><a href="contacts/">Поддержка</a></p>
                     <p><a href="legal/">Правовая информация</a></p>
                     <p><a href="putin/m/">Скачать файл</a></p>
                 </div>
-                
+
                 <div class="col-sm country">
                     <p><b><a href="country/">Страны</a></b></p>
                     <p><a href="country/belarus/">Беларусь</a></p>
